test(covering): cover filter shapes + make the sweep fast (@Fork(0), shared engine)
- Added the filter shapes back to the measured set: residual filter, filter projection,
  and the varchar (async-filter) group-by — so the benchmark covers filters, not just
  aggregation/group-by.
- Run in-process (@Fork(0)) and build the engine + worker pool ONCE per run, shared across
  all @Param combos. @Fork(1) cold-started a fresh JVM (loading the ~43 MB shaded jar) and
  reopened the engine for every one of the dozens of combinations, which made the full
  selectivity sweep take ~45 min; in-process with a shared engine it is a few minutes.
  Parallel and serial use separate engines (one 8-worker, one 1-worker) so a given run only
  opens one engine on the root.

Net data (20M rows, 8 workers): covered speedup over a warm parallel scan (scan / covered),
now including the filter shapes:

  selectivity  sum   first/last  residual  filter-proj  gb(sym)  gb(vchar)  count
  0.1%         18.7x 18.7x       15.5x     3.8x         6.6x     6.8x       614x
  1%           3.5x  3.7x        2.85x     3.4x         1.50x    1.43x      189x
  5%           1.10x 1.10x       0.68x     1.61x        0.47x    0.62x      80x
  50%          0.40x 0.36x       0.25x     1.45x        0.19x    0.36x      15x

filter projection wins at EVERY selectivity (covered reads only matching rows' columns;
the scan reads all rows to filter), count always wins, aggregations below ~5%, group-bys
below ~2%. Parallelism (parallel vs serial covered) is a separate ~2.6-3.8x on the
decode-heavy shapes.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>